--- a/python/Problema_del_cantero.ipynb
+++ b/python/Problema_del_cantero.ipynb
@@ -24,7 +24,7 @@
         "1. Hay 4 clases de plantines.\n",
         "2. No puede haber 2 plantines consecutivos de la misma clase.\n",
         "\n",
-        "¿De cuántas formas se puede hacer? (las rotaciones no son equivalentes)\n",
+        "¿De cuántas formas se puede hacer? (las rotaciones *no* son equivalentes)\n",
         "\n",
         "**Solución**  732.\n",
         "\n",
@@ -96,28 +96,40 @@
         "## Planteo recursivo del problema\n",
         "\n",
         "\n",
+        "Llamemos $s(c, n)$ a  la cantidad de coloreos  de un polígono de $n$ lados con $c$ colores  ($n>2$ ,$c \\ge 2$). Por *coloreo* se entiende que dos vértices consecutivos no pueden tener el mismo color.\n",
+        "\n",
         "Sean $n, c \\ge 2$ y dado $i$ tal que $0 \\le i < c$,  primero calcularemos $f(n, i)$ que nos dice la cantidad de formas de pintar los vértices de una línea de $n$ puntos con $c$ colores,  con las siguientes restricciones:\n",
         "\n",
-        "1. el primer vértice tiene color 0;\n",
+        "1. el primer vértice tiene color $0$;\n",
         "2. no hay dos vértices consecutivos pintados del mismo color;\n",
         "3. el último vértice tiene color $i$.\n",
         "\n",
-        "La solución al problema original es $4f(7, 0)$ pues identificando el primer y último vértice el valor  $f(7, 0)$ resuelve el problema de los 6 vértices cuando el primer vértice es 0.  Luego hay que multiplicar por la cantidad de colores para no tener restricciones en el primer vértice.\n",
+        "La solución al problema original es $s(4, 7) = 4f(7, 0)$ pues identificando el primer y último vértice el valor  $f(7, 0)$ resuelve el problema de los $6$ vértices cuando el primer vértice es $0$.  La solución es análoga cuando el primer vértice es de otro color, es decir, cuando se empieza del vértice $i$ hay $f(7, 0)$ coloreos posibles que cumplen  que el último vértice es $i$.\n",
         "\n",
+        "Razonando de manera análoga, \n",
+        "\\begin{equation*}\n",
+        "s(c,n) = cf(n+1,0), \\quad  (n>2 ,c \\ge 2). \\tag{s*}\n",
+        "\\end{equation*}\n",
+        "Esto se debe a que $f(n+1,0)$,  que es colorear una línea de $n+1$ puntos que empieza y termina en $0$,  es equivalente, identificando el último vértice y el primero,  a colorear un polígono de $n$ vértices donde un vértice elegido comienza en $0$. Es claro entonces que  $f(n+1,0)$ será el número de formas de colorear un polígono de $n$ vértices donde el vértice elegido comienza en cualquier color. Como hay $c$ colores se deduce la fórmula.\n",
         "\n",
-        "Se puede obtener $f$ de forma recursiva.\n",
+        "Ahora, obtendremos  $f$, y por lo tanto $s$, de forma recursiva. No es difícil ver que:\n",
         "$$\n",
         "\\begin{align}\n",
         "f(2, 0) &= 0; & &\\\\\n",
         "f(2, i)  &= 1&&\\text{si } 0 < i < c \\\\\n",
-        "f(n, 0) &= \\sum_{j=1}^{c-1}  f(n - 1, j)&&\\text{si } n > 2    \\\\\n",
-        "f(n, i) &= f(n - 1, 0) + \\sum_{1 \\le j < c,\\; j\\not= i} f(n - 1, j)& &\\text{si }  0 < i < c, \\; n>2.\n",
+        "f(n, i) &= \\sum_{0 \\le j < c,\\; j\\not= i}  f(n - 1, j)&&\\text{si } n > 2 .\n",
         "\\end{align}\n",
         "$$\n",
-        "Expliquemos lo de arriba: (1) y (2) son casos base triviales. El caso (3) se obtiene pensando que cada coloreo de $n$ vértices que empiece con $0$ y termine con  $0$ se descompone en $c-1$ coloreos de $n-1$ vértices que empiecen con $0$ y terminen con un color distinto de $0$. \n",
+        "Expliquemos lo de arriba: (1) y (2) son casos base triviales. El caso (3) se obtiene pensando que cada coloreo de $n$ vértices de una linea que empiece con $0$ y termine con  $i$ se descompone en $c-1$ coloreos de $n-1$ vértices que empiecen con $0$ y terminen con un color distinto de $i$. \n",
         "\n",
-        "Como, por una cuestión de simetría, $f(n, j) = f(n, k)$ para $1 \\le j, k < c$ y $j \\ne k$, obtenemos:\n",
-        "\n",
+        "Como, por una cuestión de simetría, $f(n, j) = f(n, k)$ para $1 \\le j, k < c$ y $j \\ne k$, obtenemos de la fórmula (3):\n",
+        "$$\n",
+        "\\begin{align*}\n",
+        "f(n, 0) &=   \\sum_{0 \\le j < c,\\; j\\not= 0}  f(n - 1, j) = \\sum_{0 < j < c,}  f(n - 1, j) = (c-1)f(n-1,1);\\\\\n",
+        "f(n, i) &= \\sum_{0 \\le j < c,\\; j\\not= i}  f(n - 1, j) = f(n - 1, 0) + \\sum_{0 < j < c,\\; j\\not= i} f(n - 1, j) = f(n - 1, 0) + (c-2) f(n - 1, 1), \\quad (i \\ne 0).\n",
+        "\\end{align*}\n",
+        "$$\n",
+        "Concluyendo, \n",
         "$$\n",
         "\\begin{align*}\n",
         "f(2, 0) &= 0& &\\\\\n",
@@ -146,86 +158,11 @@
         "\\end{align*}\n",
         "$$\n",
         "\n",
-        "Entonces, la solución al problema con un polígono de $n>2$ vértices y $c$ colores es equivalente a contar todos los coloreos de $n$ vértices que empiecen con el color $0$  no terminen en $0$, esto es $(c-1)a_n$. Además debemos agregar todos los demás casos, cuando empiezan en color $i$, para $0 \\le i < c$, es decir,  son $c$ casos, por lo tanto el resultado es $c(c-1)a_n$.\n",
+        "Entonces, la solución al problema con un polígono de $n>2$ vértices y $c$ colores es equivalente a contar todos los coloreos de $n$ vértices que empiecen con el color $0$  no terminen en $0$, esto es $(c-1)a_n$. Además debemos agregar todos los demás casos, cuando empiezan en color $i$, para $0 \\le i < c$, es decir,  son $c$ casos, por lo tanto el resultado es \n",
+        "\\begin{equation*}\n",
+        "s(c,n) =c(c-1)a_n, \\quad  (n>2 ,c \\ge 2). \\tag{s**}\n",
+        "\\end{equation*}\n",
         "\n",
-        "Ya esto nos permitiría resolver fácilmente el problema original ($c=4$): debemos calcular recursivamente $12a_6$ que lleva solamente 4 pasos.\n",
-        "\n",
-        "También podemos codificar esta recursión\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Planteo recursivo del problema (2)\n",
-        "\n",
-        "\n",
-        "Sean $n, c \\ge 2$ y dados $j, i$ tal que $0 \\le j,i < c$,  primero calcularemos $f(n, j, i)$ que nos dice la cantidad de formas de pintar los vértices de una línea de $n$ puntos con $c$ colores,  con las siguientes restricciones:\n",
-        "\n",
-        "1. el primer vértice tiene color $j$;\n",
-        "2. no hay dos vértices consecutivos pintados del mismo color;\n",
-        "3. el último vértice tiene color $i$.\n",
-        "\n",
-        "La solución al problema original es $4f(7, 0, 0)$ pues identificando el primer y último vértice el valor  $f(7, 0, 0)$ resuelve el problema de los $6$ vértices cuando el primer vértice es $0$.  Luego hay que multiplicar por la cantidad de colores para no tener restricciones en el primer vértice. O dicho de otra forma: la solución para los $6$ vértices y $4$ colores es $f(7, 0, 0) +f(7, 1, 1) +f(7, 2, 2) +f(7, 3, 3)$ y por simetría todos los términos de la suma son iguales entre si. \n",
-        "\n",
-        "Razonando de la misma forma, la solución del problema general es:\n",
-        "$$\n",
-        "\\begin{equation}\n",
-        "\\sum_{j=0}^{c-1}  f(n, j, j) = c f(n, 0,0). \\tag{*}\n",
-        "\\end{equation}\n",
-        "$$\n",
-        "\n",
-        "\n",
-        "Se puede obtener $f$ de forma recursiva.\n",
-        "$$\n",
-        "\\begin{align}\n",
-        "f(2, j, j) &= 0; & &\\\\\n",
-        "f(2, j, i)  &= 1&&\\text{si } j \\ne i;   \\\\\n",
-        "f(n, j, i) &= \\sum_{k \\ne i}  f(n - 1, j, k)&&\\text{si } n > 2.\n",
-        "\\end{align}\n",
-        "$$\n",
-        "Expliquemos lo de arriba: (1) y (2) son casos base triviales. El caso (3) se obtiene pensando que cada coloreo de $n$ vértices que empiece con $j$ y termine con  $i$ se descompone en $c-1$ coloreos de $n-1$ vértices que empiecen con $j$ y terminen con un color distinto de $i$. \n",
-        "\n",
-        "Como, por una cuestión de simetría, $f(n, j, k_1) = f(n, j, k_2)$ para $0 \\le k_1, k_2 < c$ y $j \\ne k_1, k_2$, obtenemos:\n",
-        "\n",
-        "$$\n",
-        "\\begin{align}\n",
-        "f(2, j, j) &= 0; & &\\\\\n",
-        "f(2, j, i)  &= 1&&\\text{si } j \\ne i;   \\\\\n",
-        "f(n, j, i) &= f(n-1, j, j) + \\sum_{k \\ne i}  f(n - 1, j, k)&&\\text{si } n > 2,\n",
-        "\\end{align}\n",
-        "$$\n",
-        "o equivalentemente\n",
-        "$$\n",
-        "\\begin{align}\n",
-        "f(2, j, j) &= 0; & &\\\\\n",
-        "f(2, j, i)  &= 1&&\\text{si } j \\ne i;   \\\\\n",
-        "f(n, j, i) &= f(n-1, j, j) + (c-1)  f(n - 1, j, k)&&\\text{si } n > 2, k \\ne 2.\n",
-        "\\end{align}\n",
-        "$$\n",
-        "\n",
-        "\n",
-        "Observar que si $n>3$\n",
-        "$$\n",
-        "f(n, 1) = f(n - 1, 0) + (c-2)  f(n - 1, 1) = (c-1)f(n - 2, 1) + (c-2)  f(n - 1, 1)\n",
-        "$$\n",
-        "Y si $n=3$\n",
-        "$$\n",
-        "f(3,1) = f(2, 0) + (c-2)  f(2, 1) = c-2\n",
-        "$$\n",
-        "\n",
-        "Luego si definimos $a_n = f(n,1)$ para $n \\ge 2$ obtenemos para $a_n$  la siguiente recursión:\n",
-        "\n",
-        "$$\n",
-        "\\begin{align*}\n",
-        "a_2  &= 1; & & \\\\\n",
-        "a_3  &= c-2 &&      \\tag{*}\\\\\n",
-        "a_n &= (c-2)a_{n-1} + (c-1)a_{n-2}& &\\text{si }  n>3.\n",
-        "\\end{align*}\n",
-        "$$\n",
-        "\n",
-        "Entonces, la solución al problema con un polígono de $n>2$ vértices y $c$ colores es equivalente a contar todos los coloreos de $n$ vértices que empiecen con el color $0$  no terminen en $0$, esto es $(c-1)a_n$. Además debemos agregar todos los demás casos, cuando empiezan en color $i$, para $0 \\le i < c$, es decir,  son $c$ casos, por lo tanto el resultado es $c(c-1)a_n$.\n",
         "\n",
         "Ya esto nos permitiría resolver fácilmente el problema original ($c=4$): debemos calcular recursivamente $12a_6$ que lleva solamente 4 pasos.\n",
         "\n",
@@ -235,11 +172,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "fRJbl3qZHEzb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cantidad de coloréos de 4 colores de un polígono de 6 vértices: 732\n"
+          ]
+        }
+      ],
       "source": [
         "def pintar_linea(n, c):\n",
         "    assert type(n) == type(c) == int and n >= 2 and c >= 2, 'los parámetros deben ser enteros >= 2'\n",
@@ -254,11 +199,11 @@
         "        nro_casos = (c - 2) * pintar_linea(n - 1, c) + (c - 1) * pintar_linea(n - 2, c)\n",
         "    return nro_casos\n",
         "\n",
-        "def pintar_poligono(n, c):\n",
+        "def colorear_poligono(n, c):\n",
         "    assert type(n) == type(c) == int and n >= 3 and c >= 2, 'los parámetros deben ser enteros en cierto rango'\n",
         "    return 12 * pintar_linea(n, c)\n",
         "\n",
-        "pintar_poligono(6, 4)"
+        "print(\"Cantidad de coloréos de 4 colores de un polígono de 6 vértices:\",colorear_poligono(6, 4))"
       ]
     },
     {
@@ -272,13 +217,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "eBcRzhYpJeuO"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cantidad de coloréos de 6 colores de un polígono de 20 vértices: 38146972656252\n"
+          ]
+        }
+      ],
       "source": [
-        "pintar_poligono(20, 6)"
+        "n, c = 20, 6\n",
+        "print(\"Cantidad de coloréos de\", c, \"colores de un polígono de\", n, \"vértices:\",colorear_poligono(20, 6))"
       ]
     },
     {
@@ -292,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "llHLLLp4KfsB"
       },
@@ -314,25 +268,31 @@
         "        nro_casos = ar[1]\n",
         "    return nro_casos\n",
         "\n",
-        "def pintar_poligono(n, c):\n",
+        "def colorear_poligono(n, c):\n",
         "    assert type(n) == type(c) == int and n >= 3 and c >= 2, 'los parámetros deben ser enteros en cierto rango'\n",
-        "    return 12 * pintar_linea(n, c)\n",
-        "\n",
-        "pintar_poligono(6, 4)"
+        "    return 12 * pintar_linea(n, c)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "d6-0QzgQNuxQ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dígitos de la cantidad de coloréos de 15 colores de un polígono de 4506 vértices: 5163\n"
+          ]
+        }
+      ],
       "source": [
-        "nro_formas = pintar_poligono(4506, 15)\n",
+        "nro_formas = colorear_poligono(4506, 15)\n",
         "# averiguamos la cantidad de dígitos\n",
-        "import math\n",
-        "math.log10(nro_formas)"
+        "nro_digitos = len(str(nro_formas))\n",
+        "print(\"Dígitos de la cantidad de coloreos de 15 colores de un polígono de 4506 vértices:\",nro_digitos)"
       ]
     },
     {
@@ -341,7 +301,7 @@
         "id": "5Qm8v-DFQxWn"
       },
       "source": [
-        "La cantidad de coloreos que puedo hacer de un polígono de 4506 vértices con  15 colores y cumpliendo la consigna es un número  de aproximadamente 5162 dígitos."
+        "La cantidad de coloreos que puedo hacer de un polígono de 4506 vértices con  15 colores y cumpliendo la consigna es  de 5163 dígitos."
       ]
     },
     {
@@ -394,13 +354,22 @@
         "$$\n",
         "a_n = \\frac{(-1)^n}c +  \\frac{(c-1)^{n-1}}{c} = \\frac{(-1)^n + (c-1)^{n-1}}{c}.\n",
         "$$\n",
-        "para $n \\ge 2$.\n",
+        "para $n \\ge 2$.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
-        "Volviendo a la solución del problema de $n$ vértices y $c$ colores, si  $s_n$ es la cantidad de formas de colorear,  entonces $s_2=0$ y si $n >2$, $s_n$ es $a_n$ por la cantidad de inicios distintos, $c$ uno por color, por  la cantidad de finales distintos, $c-1$ uno por color menos el primer color. Es decir $s_n = c(c-1)a_n$, luego:\n",
+        "Volviendo a la solución del problema de $n$ vértices y $c$ colores, por $(s**)$,\n",
         "\n",
+        "\\begin{equation*}\n",
+        "s(c,n) =c(c-1)a_n = c(c-1)(\\frac{(-1)^n + (c-1)^{n-1}}{c}) = (-1)^n(c-1) + (c-1)^{n}, \\quad  (n>2 ,c \\ge 2). \n",
+        "\\end{equation*}\n",
+        "Concluyendo, \n",
         "$$\n",
-        "s_2 = 0 \\\\\n",
-        "s_n =  (-1)^n(c-1) + (c-1)^{n}, \\quad n> 2\n",
+        "s_n =  (-1)^n(c-1) + (c-1)^{n}, \\quad  (n>2 ,c \\ge 2). \n",
         "$$\n",
         "\n",
         "En  el caso $n=6$, $c=4$, el problema original, obtenemos\n",
@@ -417,14 +386,14 @@
       "source": [
         "## Conclusión (solución óptima)\n",
         "\n",
-        "**Resultado.** *Sean $n>2$ ,$c \\ge 2$. La cantidad de formas de  pintar los vértices de un polígono de $n$ lados con $c$ colores sin que haya dos vértices consecutivos pintados del mismo color es $(-1)^n(c-1) + (c-1)^{n}$.*\n",
+        "**Resultado.** *Sean $n>2$ ,$c \\ge 2$. La cantidad de formas de  pintar los vértices de un polígono de $n$ lados con $c$ colores sin que haya dos vértices consecutivos pintados del mismo color es*$$(-1)^n(c-1) + (c-1)^{n}.$$.\n",
         "\n",
-        "Esto lo podemos hacer con una claculadora o un programa extremadamente sencillo:"
+        "Esto lo podemos implementar con una calculadora o un programa extremadamente sencillo:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -437,20 +406,40 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "114612.80356782381\n",
-            "1146128.035678238\n"
+            "Dígitos de la cantidad de coloreos de 15 colores de un polígono de 100.000  vértices: 114613\n"
           ]
         }
       ],
       "source": [
-        "def pintar_poligono(n, c):\n",
+        "def colorear_poligono(n, c):\n",
         "    assert type(n) == type(c) == int and n >= 3 and c >= 2, 'los parámetros deben ser enteros en cierto rango'\n",
-        "    return (-1)**n * (c - 1) + (c - 1)**n\n",
+        "    return (-1)**n * (c - 1) + (c - 1)**n  \n",
         "\n",
-        "from math import log10\n",
-        "# averiguamos la cantidad de dígitos en ciertos casos\n",
-        "print(log10(pintar_poligono(10**5, 15))) # 100.000 de vértices,  15 colores\n",
-        "print(log10(pintar_poligono(10**6, 15))) # 1.000.000 de vértices,  15 colores"
+        "print(\"Dígitos de la cantidad de coloreos de 15 colores de un polígono de 100.000  vértices:\",len(str(colorear_poligono(10**5, 15))))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Un poco má tarda:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dígitos de la cantidad de coloreos de 15 colores de un polígono de 1.000.000  vértices: 1146129\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Dígitos de la cantidad de coloreos de 15 colores de un polígono de 1.000.000  vértices:\",len(str(colorear_poligono(10**6, 15))))"
       ]
     },
     {
@@ -481,7 +470,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.4"
     }
   },
   "nbformat": 4,
