--- a/python/Problema_del_cantero.ipynb
+++ b/python/Problema_del_cantero.ipynb
@@ -415,7 +415,7 @@
         "    assert type(n) == type(c) == int and n >= 3 and c >= 2, 'los parámetros deben ser enteros en cierto rango'\n",
         "    return (-1)**n * (c - 1) + (c - 1)**n  \n",
         "\n",
-        "print(\"Dígitos de la cantidad de coloreos de 15 colores de un polígono de 100.000  vértices:\",len(str(colorear_poligono(10**5, 15))))"
+        "print(\"Dígitos de la cantidad de coloreos con 15 colores de un polígono de 100.000  vértices:\",len(str(colorear_poligono(10**5, 15))))"
       ]
     },
     {
@@ -439,7 +439,7 @@
         }
       ],
       "source": [
-        "print(\"Dígitos de la cantidad de coloreos de 15 colores de un polígono de 1.000.000  vértices:\",len(str(colorear_poligono(10**6, 15))))"
+        "print(\"Dígitos de la cantidad de coloreos con 15 colores de un polígono de 1.000.000  vértices:\",len(str(colorear_poligono(10**6, 15))))"
       ]
     },
     {
